Fix logo on safari

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
 	p {
 		@apply max-w-prose;
 	}
+	img {
+		@apply w-full;
+	}
 }
 
 @tailwind components;
